@@ -184,6 +184,11 @@ namespace Bilten.UI
 
                     DAOFactoryFactory.DAOFactory.GetTakmicenjeDAO().Update(takmicenje);
 
+                    // TODO4: Izgleda da prikazuje rezultate za sprave u takmicenju I cak i kada se u propozicijama
+                    // selektuje da ne postoji takmicenje III. U stvari tako i treba zato sto ipak treba da postoji
+                    // pregled nastupa po spravama cak i kada se selektuje da ne postoji takmicenje III. Tako da ovo
+                    // treba da ostane. Promeni da i za viseboj bude ovako.
+
                     // TODO4: Potrebno je ponovo izracunati poretke i ucesnike zato
                     // sto su se mozda promenili brojevi finalista, rezervi, nacin
                     // racunanja preskoka itd.
@@ -191,6 +196,7 @@ namespace Bilten.UI
                     // odvojeno takmicenje III, a u novim propozicijama je navedeno da ne postoji odvojeno
                     // takmicenje III), mozda bi trebalo dati mogucnost korisniku da odustane od operacije.
                     // Obratiti paznju i na ekipno takmicenje - sta ako je ranije bilo kombinovano a sad nije i obratno.
+
                     RezultatskoTakmicenje.updateImaEkipnoTakmicenje(rezTakmicenja);
                     foreach (RezultatskoTakmicenje rt in rezTakmicenja)
                     {
